// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDelete Dialog with redirect operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceDelete Dialog with redirect owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceDelete Dialog without redirect operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceDelete Dialog without redirect owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`DeviceDelete Icon operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceDelete Icon owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
